# django-osm-field

./: .bumpversion.cfg  .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  AUTHORS.rst  CHANGELOG.md  CHANGES.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  index.html  jquery-plugin-example.html  params.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: pythonpublish.yml  pythontests.yml  test-deploy.yml
docs/: Makefile  authors.rst  conf.py  index.rst  installation.rst  modules.rst  osm_field.rst  settings.py  usage.rst
docs/source/: authors.rst  conf.py  index.rst  installation.rst  usage.rst
docs/source/ref/: fields.rst  forms.rst  index.rst  validators.rst  widgets.rst
example/example/: admin.py  models.py  settings.py  urls.py  views.py  wsgi.py
example/example/migrations/: 0001_initial.py
example/example/static/css/: example.css
example/example/templates/example/: base.html  examplemodel_confirm_delete.html  examplemodel_detail.html  examplemodel_form.html  examplemodel_list.html
javascripts/: osm_field.js
osm_field/: __init__.py  apps.py  fields.py  forms.py  validators.py  widgets.py
osm_field/static/: example.html
osm_field/static/css/: osm_field.css  osm_field.min.css
osm_field/static/js/: osm_field.js  osm_field.min.js
tests/: forms.py  models.py  settings.py  test_fields.py  test_forms.py  test_osm_field.py  test_validators.py  urls.py
tests/migrations/: 0001_initial.py
