[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]

[tool.black]
target-version = ['py310']

[tool.coverage.run]
branch = true
source = ["osm_field/"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
combine_as_imports = true
known_first_party = ["osm_field", "tests"]
profile = "black"

[tool.setuptools_scm]
