[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools_scm",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "django-osm-field"
authors = [{name = "Markus Holtermann", email = "info@markusholtermann.eu"}]
description = "Django OpenStreetMap Field"
readme = "README.md"
keywords = [
    "OpenStreetMap",
    "OSM",
    "Django",
    "Geo",
    "Geoposition",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.6"
dependencies = ["Django>=3.2"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/MarkusH/django-osm-field"
CI = "https://github.com/MarkusH/django-osm-field/actions"
Changelog = "https://github.com/MarkusH/django-osm-field/blob/main/CHANGELOG.md"
Issues = "https://github.com/MarkusH/django-osm-field/issues"

[project.optional-dependencies]
dev = ["pre-commit"]
docs = [
    "Django",
    "sphinx_rtd_theme",
    "Sphinx>=3.0,<3.4",
]
test = ["coverage[toml]>=5,<6", "Django"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "*.example",
    "*.example.*",
    "example.*",
    "example",
    "*.tests",
    "*.tests.*",
    "tests.*",
    "tests",
]
namespaces = false

[tool.black]
target-version = ['py310']

[tool.coverage.run]
branch = true
source = ["osm_field/"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.ruff]
line-length = 88
