[metadata]
name = django-osm-field
author = Markus Holtermann
author_email = info@markusholtermann.eu
description = Django OpenStreetMap Field
keywords =
    OpenStreetMap,
    OSM,
    Django,
    Geo,
    Geoposition
url = https://github.com/MarkusH/django-osm-field
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    CI = https://github.com/MarkusH/django-osm-field/actions
    Changelog = https://github.com/MarkusH/django-osm-field/blob/main/CHANGELOG.md
    Issues = https://github.com/MarkusH/django-osm-field/issues

[options]
packages = find:
setup_requires = setuptools_scm
install_requires = Django>=3.2
include_package_data = True
python_requires = >=3.6

[options.packages.find]
exclude =
    *.example
    *.example.*
    example.*
    example
    *.tests
    *.tests.*
    tests.*
    tests

[options.extras_require]
dev = pre-commit
docs =
    Django
    sphinx_rtd_theme
    Sphinx>=3.0,<3.4
test = coverage[toml]>=5,<6; Django

[flake8]
max-line-length = 88
